# aoc-2020

./: Cargo.toml  start_solve.py
benchmark/: Cargo.toml
benchmark/benches/: benchmark.rs
day01/: Cargo.toml
day01/src/: lib.rs
day02/: Cargo.toml
day03/: Cargo.toml
day04/: Cargo.toml
day04/src/: lib.rs
day05/: Cargo.toml
day05/src/: lib.rs
day06/: Cargo.toml
day06/src/: lib.rs
day07/: Cargo.toml
day07/src/: lib.rs  main.rs
day08/: Cargo.toml
day08/src/: lib.rs  main.rs
day09/: Cargo.toml
day09/src/: lib.rs  main.rs
day1/: Cargo.toml
day1/src/: lib.rs  main.rs
day10/: Cargo.toml
day10/src/: lib.rs  main.rs
day11/: Cargo.toml
day11/src/: lib.rs  main.rs
day12/: Cargo.toml
day12/src/: lib.rs  main.rs
day13/: Cargo.toml
day13/src/: lib.rs  main.rs
day14/: Cargo.toml
day14/src/: lib.rs  main.rs
day15/: Cargo.toml
day15/src/: lib.rs  main.rs
day16/: Cargo.toml
day16/src/: lib.rs  main.rs
day17/: Cargo.toml
day17/src/: lib.rs  main.rs
day18/: Cargo.toml
day18/src/: lib.rs  main.rs
day19/: Cargo.toml
day19/src/: lib.rs  main.rs
day2/: Cargo.toml
day2/src/: lib.rs  main.rs
day20/: Cargo.toml
day20/src/: lib.rs  main.rs  part1.rs  part2.rs  side_filler.rs  tile.rs
day21/: Cargo.toml
day21/src/: input.txt  lib.rs  main.rs
day22/: Cargo.toml
day22/src/: lib.rs  main.rs
day23/: Cargo.toml
day23/src/: lib.rs  main.rs
day24/: Cargo.toml
day24/src/: lib.rs  main.rs
day25/: Cargo.toml
day25/src/: lib.rs  (+1 more)
day3/: Cargo.toml
day4/: Cargo.toml
day5/: Cargo.toml
day6/: Cargo.toml
(+8 files in other folders)
