[package]
name = "aoc-benchmark"
version = "1.0.0"
authors = ["PurpleMyst <PurpleMyst@users.noreply.github.com>"]
edition = "2018"

[dependencies]
day1 = { path = "../day1" }
day2 = { path = "../day2" }
day3 = { path = "../day3" }
day4 = { path = "../day4" }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false
