[package]
name = "aoc-benchmark"
version = "1.0.0"
authors = ["PurpleMyst <PurpleMyst@users.noreply.github.com>"]
edition = "2018"

[dependencies]
day1 = { path = "../day1" }
day2 = { path = "../day2" }
day3 = { path = "../day3" }
day4 = { path = "../day4" }
day5 = { path = "../day5" }
day6 = { path = "../day6" }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false
